[package]
name = "am64x_hal"
version = "0.1.0"
edition = "2021"

[dependencies]
am64x-pac = { path = "../am64x_pac" }
bitflags = "2.4"
embedded-hal = "1"
embedded-hal-nb = "1"
embedded-io = "0.6"
heapless = "0.7"
nb = "1.1"
paste = "1.0.15"
bitvec = "1.0.1"

[dependencies.critical-section]
version = "1.1"
optional = true

[dependencies.panic-halt]
version = "0.2"
optional = true

[dependencies.riscv-rt]
version = "0.12"
optional = true

[dev-dependencies.defmt]
version = "0.3"

# [dev-dependencies.defmt-test]
# version = "0.3"

[features]
default = ["rt"]
rt = ["critical-section/restore-state-bool", "am64x-pac/rt", "riscv-rt"]
# rts = ["rt", "am64x-pac/rts", "riscv-rt/s-mode"]